openmediavault-compose (8.1) UNRELEASED; urgency=medium

  * Support podman
  * Enable docker repo on install
  * Add compose build job to Schedule tab

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Sun, 21 Dec 2025 16:43:38 +0000

openmediavault-compose (8.0.6) stable; urgency=low

  * Add placeholder expansion in global environment file
  * Change liverestore default to off to match docker default.
    liverestore causes problems with containers using s6 when enabled

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Mon, 15 Dec 2025 23:28:42 +0000

openmediavault-compose (8.0.5) stable; urgency=low

  * Add placeholder expansion for user, group, and timezone tokens.
    The following tokens are now supported:
      - ${{ uid:"user" }}
      - ${{ gid:"group" }}
      - ${{ tz }}

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Fri, 12 Dec 2025 14:17:18 +0000

openmediavault-compose (8.0.4) stable; urgency=low

  * Add placeholder expansion for ${{ sf:"name" }} tokens, resolving them
    to the shared folder’s absolute path across compose, override, env, and
    config files.

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Thu, 11 Dec 2025 22:20:21 +0000

openmediavault-compose (8.0.3) stable; urgency=low

  * Add unit to max size

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Wed, 10 Dec 2025 22:14:19 +0000

openmediavault-compose (8.0.2) stable; urgency=low

  * Add shared folder selection for docker storage to avoid having to
    look up absolute path of shared folder
  * Update to yq 4.49.2
  * Update to regct 0.11.1

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Mon, 08 Dec 2025 23:34:05 +0000

openmediavault-compose (8.0.1) stable; urgency=low

  * Check file syntax on save if enabled
  * Add docker log size field and enable rotation if greater than 0
  * Add live restore option to avoid restarting containers when docker is
    restarted/upgraded
