@@ -51,6 +51,17 @@ data:
         flexGrow: 1
         sortable: true
         cellTemplateName: checkIcon
+      - name: _('Build')
+        prop: filebuild
+        flexGrow: 1
+        sortable: true
+        cellTemplateName: checkIcon
+      - name: _('Pull')
+        prop: filepull
+        flexGrow: 1
+        sortable: true
+        cellTemplateName: checkIcon
+        hidden: true
       - name: _('Verbose')
         prop: verbose
         flexGrow: 1
