@@ -3,6 +3,7 @@ openmediavault-compose (8.1) UNRELEASED; urgency=medium
   * Support podman
   * Enable docker repo on install
   * Add compose build job to Schedule tab
+  * Add docker image prune --all button to Images tab
 
  -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Sun, 21 Dec 2025 16:43:38 +0000
 
